syntax = "proto3";

option csharp_namespace = "inventory.Protos";

package inventory;

message userInstance {
    int32 Id = 1;
    string UserName = 2;
    string Name =3;
    int32 Age = 4;
    string Role = 5;
    string BattingStyles = 6;
    string BlowingStyles = 7;
    string Password = 8;
    bool IsExternal = 9;
    int32 Runs = 10;
    int32 Wickets = 11;
    int32 Matches = 12;
    string DisplayImage =13;
}

message userInstanceRequest{
    int32 Id = 1;
    string UserName = 2;
    string Password = 8;
    string Name =3;
    int32 Age = 4;
    string Role = 5;
    string BattingStyle = 6;
    string BlowingStyle = 7;
}

message teamMemberInstance{
    int32 Id = 1;
    int32 userId = 2;
    bool IsCaptain = 3;
    bool IsPlaying =4;
}

message teamInstance{
    int32 Id = 1;
    string Name = 2;
    repeated teamMemberInstance Members =3;
    int32 Count = 4;

}

message inventoryData{
    userInstance user =1;
    repeated teamInstanceWithUser teams = 2;
    repeated MatchInstanceResponse matches =3;
}

message statusResponse {
    bool status = 1;
}

message teamMemberWithUsers{
    int32 Id = 1;
    userInstance user = 2;
    bool IsCaptain = 3;
    bool IsPlaying =4;
}

message teamInstanceWithUser{
    int32 Id = 1;
    string Name = 2;
    repeated teamMemberWithUsers Members =3;
    int32 Count = 4;
    int32 CaptainId= 5;
}

message makeCaptainInstance{
    int32 UserId=1;
    int32 TeamId=2;
}

message LeaderBoardRequest{
    int32 Page=1;
    bool Mode = 2;
    string SearchString =3;
}

message ListOfUser{
    repeated userInstance users = 1;
}

message MatchInstance{
    int32 Id = 1;
    int32 HostTeamId = 2;
    int32 VisitorTeamId = 3;
    int32 Overs = 4;
    int32 Wickets = 5;
    int32 VictoryTeam_id = 6;
    int64 StartDate = 7;
    bool IsCompleted = 8;
    int32 ScoreCardId = 9;
    bool IsHostInnings = 10;
}

message completMatachRequest {
    int32 scoreCardId = 1;
    int32 VictoryTeamId =2;
    string Result = 3;
}


message scoreCardRequest {
    int32 Id = 1;
    int32 Overs = 2;
    int32 HostTeamId = 3;
    int32 VisitorTeamId = 4;
    string HostTeamName = 5;
    string VisitorTeamName = 6;
    InningsScoreCardgrpc HostTeamInnings = 7;
    InningsScoreCardgrpc VisitorTeamInnings = 8;
    bool IsHostInnings = 9;
}

message InningsScoreCardgrpc {
    int32 Id = 1;
    int32 Wickets = 2;
    int32 Balls = 3;
    int32 Score = 4;
    int32 TotalOver = 5;
    int32 TotalWickets = 6;
    bool IsInningsCompleted = 7;
    repeated BattingInningsgrpc BattingStats = 8;
    repeated BlowingInningsgrpc BlowingStats = 9;
}

message BattingInningsgrpc {
    int32 Id = 1;
    string DisplayName = 2;
    int32 UserId = 3;
    int32 Runs = 4;
    int32 Balls = 5;
    int32 Sixer = 6;
    int32 Four = 7;
    string BlowedBy = 8;
    string CaughtBy = 9;
}

message BlowingInningsgrpc {
    int32 Id = 1;
    string DisplayNames = 2;
    int32 UserId = 3;
    int32 Runs = 4;
    int32 Wickets = 5;
    int32 BallsBlowed = 6;
}
message listOfScoreCard{
    repeated scoreCardRequest scoreCard =1;
}

message MatchInstanceResponse{
    int32 Id = 1;
    int32 HostTeam_id = 2;
    int32 VisitorTeam_id = 3;
    int32 Overs = 4;
    int32 Wickets = 5;
    int32 VictoryTeam_id = 6;
    int64 StartDate = 7;
    bool IsCompleted = 8;
    scoreCardRequest  ScoreCard = 9;
    bool IsHostInnings = 10;
    string Result = 11;
}


message emptyRequest{

}

message searchStringRequest{
    string SearchString =1;
}
message listofTeams{
    repeated  teamInstance teamInstance =1 ;
}
message statusResponse_match{
    bool status =1;
    int32 ScoreCardId=2;
}