syntax = "proto3";

option csharp_namespace = "Matches.Protos";

import "Protos/MatchMessages.proto";

package Matches;

service Matches{
    rpc updateEachBall(EachBallRequest) returns (statusResponse);
}